# glGen-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_log.txt  glGen compile.txt  imgui.ini  project_config.json  run.sh
.cache/clangd/index/: AABBTreeBuilder.cpp.89B4081075505328.idx  AABBTreeBuilder.h.4C02959689EC960A.idx  AABBTreeToBuffer.h.7F290864328EAB37.idx  AABox.h.B5D99778B8D742C1.idx  AABox4.h.594E4E196129A228.idx  AABoxCast.h.31A0E1FFEEC7D08B.idx  ARMNeon.h.87AB071FEB602DBF.idx  ActiveEdgeMode.h.2AFB24BCF212153B.idx  ActiveEdges.h.961E6B35A34AFC6B.idx  AllowedDOFs.h.BD4827C5189B4C32.idx  AngleConstraintPart.h.1DF23ED7E62D4B82.idx  App.cpp.3C6C1FD3814DEFC1.idx  App.h.2F53584A34A0951F.idx  AppState.h.2E07961CC834EEDD.idx  Array.h.C6C7E422F18AFBCA.idx  AssetManager.cpp.2FB83F48A52C0EF9.idx  AssetManager.h.1E40A6D0F9CE99B7.idx  Atomics.h.E08380276AE8B141.idx  AxisConstraintPart.h.AAFB7DC0765F0CD5.idx  BVec16.h.2D28CF98725E03E0.idx  BVec16.inl.88BD1F911A5BF920.idx  BackFaceMode.h.5C9A6AFDC2A6EA75.idx  BinaryHeap.h.B2B9FFD3DAE3D323.idx  Body.cpp.DB6FBA30F43C7B4C.idx  Body.h.9281A544418546C8.idx  Body.inl.AFF6473A3C067A37.idx  BodyAccess.h.47EF1555481A20F7.idx  BodyActivationListener.h.315ED87CF5452699.idx  BodyCreationSettings.cpp.F2E9EB61637D9533.idx  BodyCreationSettings.h.DFBF7D0D13AB7432.idx  BodyFilter.h.422057FDCAED0E95.idx  BodyID.h.9BBDE3800306CFDD.idx  BodyInterface.cpp.35F6572278BD54BC.idx  BodyInterface.h.53B4941308D47B94.idx  BodyLock.h.A323FFF6DCF6479C.idx  BodyLockInterface.h.CBBBE8139104A0D5.idx  BodyLockMulti.h.6801CB9C662720B2.idx  BodyManager.cpp.781746A1BD36028F.idx  BodyManager.h.9407EC8C2B3A4D60.idx  BodyPair.h.29F3256AF3F4C932.idx  (+849 more)
Editor/: CMakeLists.txt  EditorTheme.h  EditorToolbar.h  EditorUI.cpp  EditorUI.h  MousePicking.h
Engine/: CMakeLists.txt
Engine/Assets/: AssetManager.cpp  AssetManager.h  FBXModel.cpp  FBXModel.h  OBJModel.cpp  OBJModel.h  PrimitiveMeshGenerator.h  UFBXModel.cpp  UFBXModel.h
Engine/Core/: CrashHandler.cpp  CrashHandler.h  EngineAssert.cpp  EngineAssert.h  EngineEvents.h  EventBus.h  IEngineSubsystem.h  Logger.cpp  Logger.h  ProjectConfig.cpp  ProjectConfig.h  SubsystemManager.cpp  SubsystemManager.h
Engine/ECS/: Components.h  Entity.h  Registry.h  SparseSet.h
Engine/ECS/Systems/: CameraSystem.h  EditorCamera.h  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.h
Engine/Input/: Keyboard.h  Mouse.h  keyboard.cpp  mouse.cpp
Engine/Rendering/: CloudFX.cpp  CloudFX.h  CloudLayer.cpp  CloudLayer.h  FireFX.cpp  FireFX.h  GLDebug.cpp  GLDebug.h  GLStateCache.cpp  GLStateCache.h  HDRSky.cpp  HDRSky.h  Material.cpp  Material.h  PostProcessor.cpp  PostProcessor.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SunFX.cpp  SunFX.h  Texture.cpp  Texture.h
Engine/Scene/: Scene.cpp  Scene.h
Engine/Scripting/: ScriptBindings.h  ScriptSystem.h
Runtime/: CMakeLists.txt
Runtime/Framework/: App.cpp  App.h  AppState.h  CoreAppLayer.cpp  CoreAppLayer.h  EditorSubsystem.cpp  EditorSubsystem.h  NetworkSubsystem.cpp  NetworkSubsystem.h  RenderLoopSubsystem.cpp  RenderLoopSubsystem.h
Runtime/Gameplay/: ProjectileSystem.cpp  ProjectileSystem.h
Runtime/Main/: main.cpp
assets/: Untitled.mtl  lab.mtl
assets/brutalist-interior/source/: CarGarage.fbx
assets/campfire/textures/: Sketchfab_2018_04_04_02_53_38.mtl
assets/campfireforest/textures/: Untitled.mtl
assets/map/textures/: map.mtl
assets/mctown/: Mineways2Skfb.mtl
assets/sanddune/textures/: Untitled.mtl
assets/shejtani/: Untitled.mtl
assets/sherman/: Sherman.mtl
assets/smalltown/: Whitechapel.mtl
assets/starwars/: Sketchfab_2022_04_14_09_29_50.mtl
assets/tiger2/textures/: Gg_26_800_300_segment_track_AM.dds  Gg_26_800_300_segment_track_ANM.dds  Gg_26_800_300_segment_track_GMM.dds  PzVIB_Tiger_II_chassis_01_AM.dds  PzVIB_Tiger_II_chassis_01_ANM.dds  PzVIB_Tiger_II_chassis_01_GMM.dds  PzVIB_Tiger_II_guns_AM.dds  PzVIB_Tiger_II_guns_ANM.dds  PzVIB_Tiger_II_guns_GMM.dds  PzVIB_Tiger_II_hull_01_AM.dds  PzVIB_Tiger_II_hull_01_ANM.dds  PzVIB_Tiger_II_hull_01_GMM.dds  Untitled.mtl  (+3 more)
scripts/: fps_controller.lua  hello.lua  movement.lua  physics_test.lua
shaders/glsl/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  cloud_composite.frag  cloud_composite.vert  fire_billboard.frag  fire_billboard.vert  fragment_core.glsl  hdr_sky.frag  outline.frag  outline.vert  point_shadow_depth.frag  point_shadow_depth.vert  projectile.frag  projectile.vert  screen_quad.vert  shadow_depth.vert  smoke_billboard.frag  vertex_core.glsl
src/: imgui.ini
(+16 files in other folders)
